<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_management"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homecare.VCA.viewHolder.Management">

    <TextView
        android:id="@+id/ManagementHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:text="@string/management_view"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/managementPatient"
        android:layout_below="@id/ManagementHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/buttonGenerateRandomPIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generateNewPIN" />

        <TextView
            android:id="@+id/textViewGeneratedPIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generatedPIN"
            android:textSize="25dp"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/managementCaretaker"
        android:layout_below="@id/ManagementHeader"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listOfPatients"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listViewPatients"/>
    </LinearLayout>


</RelativeLayout>
